--- a/SimTECH/SimTECH/Pages/Motorsport/Contracts/Manager/ContractManager.razor
+++ b/SimTECH/SimTECH/Pages/Motorsport/Contracts/Manager/ContractManager.razor
@@ -7,7 +7,7 @@
 @inject BreadcrumbProvider _bread
 @inject NavigationManager _nav
 
-<PageTitle>Contract Manager</PageTitle>
+<PageTitle>Contract manager</PageTitle>
 
 <MudContainer MaxWidth="MaxWidth.ExtraExtraLarge" Class="mt-4">
     <MudPaper MaxHeight="150px" Class="text-center">
@@ -35,10 +35,10 @@
 </MudContainer>
 
 @code {
-    private List<League>? Leagues { get; set; }
-    private List<Contract> Contracts { get; set; } = new();
-    private List<Team> Teams { get; set; } = new();
-    private List<EditContract> EditableContracts { get; set; } = new();
+    public List<League>? Leagues { get; set; }
+    public List<Contract> Contracts { get; set; } = new();
+    public List<Team> Teams { get; set; } = new();
+    public List<EditContract> EditableContracts { get; set; } = new();
 
     private bool showDropper = false;
     private bool showDurationAssigner = false;
