--- a/SimTECH/SimTECH/Pages/Motorsport/Leagues/LeagueEditor.razor
+++ b/SimTECH/SimTECH/Pages/Motorsport/Leagues/LeagueEditor.razor
@@ -1,4 +1,6 @@
-﻿@inject IOptions<SimConfig> _config
+﻿@inherits LeagueView
+
+@inject IOptions<SimConfig> _config
 
 <MudDialog>
     <TitleContent>
