--- a/SimTECH/SimTECH/Components/ScreenshotIconButton.razor
+++ b/SimTECH/SimTECH/Components/ScreenshotIconButton.razor
@@ -3,6 +3,7 @@
 <MudTooltip Text="Take a screenshot" Placement="Placement.Top" Color="Color.Tertiary">
     <MudIconButton Variant="Variant.Text"
                    Icon="@Icons.Material.Filled.Image"
+                   Color="@Colour"
                    Disabled="@disabled"
                    OnClick="TakeScreenshot"
                    Class="@_classes"
@@ -11,7 +12,7 @@
 
 @code {
     [Parameter, EditorRequired] public string TargetId { get; set; }
-    [Parameter] public Color Colour { get; set; } = Color.Primary;
+    [Parameter] public Color Colour { get; set; } = Color.Default;
     [Parameter] public bool FullWidth { get; set; } = false;
     [Parameter] public string Class { get; set; } = string.Empty;
     [Parameter] public string Styles { get; set; } = string.Empty;
