--- a/SimTECH/SimTECH/Pages/RaceWeek/Dialogs/GapChartDialog.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Dialogs/GapChartDialog.razor
@@ -6,8 +6,8 @@
                 <MudText Typo="Typo.h5">Gap to race leader</MudText>
                 <MudSpacer />
                 <MudButtonGroup Variant="Variant.Text" Color="Color.Secondary">
-                    <ScreenshotIconButton TargetId="gapper-chart-container" />
-                    <MudIconButton Icon="@Icons.Material.Filled.Close" OnClick="@(() => ChartDialog?.Close())" />
+                    <ScreenshotIconButton TargetId="gapper-chart-container" Class="btn-sm" />
+                    <MudIconButton Icon="@Icons.Material.Filled.Close" OnClick="CloseDialog" Class="btn-sm" />
                 </MudButtonGroup>
             </MudStack>
             <MudContainer MaxWidth="MaxWidth.False">
@@ -75,5 +75,10 @@
         }
 
         loading = false;
+    }
+
+    private void CloseDialog()
+    {
+        ChartDialog?.Close();
     }
 }
