--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Qualifying.razor
@@ -4,31 +4,28 @@
     <div id="qualy-table">
         @if (!loading)
         {
-            <MudPaper MinHeight="60px">
-                <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-2">
-                    <CountryFlag Code="@raceCountry" />
-                    <MudText Typo="Typo.h5">@raceName</MudText>
+            <CommonSession Drivers="@qualyDrivers"
+                           AmountRuns="@amountRuns"
+                           EntryCutoff="@entryCutoff"
+                           ProgressCutoff="@progressCutoff"
+                           HighestScore="@highestScore"
+                           LowestScore="@lowestScore"
+                           HasRaceClasses="@hasRaceClasses">
+                <CountryFlag Code="@raceCountry" />
+                <MudText Typo="Typo.h5">@raceName</MudText>
 
-                    <MudSpacer />
+                <MudSpacer />
 
-                    <MudButtonGroup Color="Color.Tertiary" Variant="Variant.Text">
-                        <ScreenshotIconButton TargetId="qualy-table" Class="btn-md" />
-                        @if (!QualySession.IsFinished && advancedRuns != amountRuns)
-                        {
-                            <MudIconButton OnClick="Advance" Icon="@IconCollection.ChevronsRight" />
-                        }
-                    </MudButtonGroup>
-                </MudStack>
-            </MudPaper>
-            <MudPaper Elevation="25">
-                <CommonSession Drivers="@qualyDrivers"
-                               AmountRuns="@amountRuns"
-                               EntryCutoff="@entryCutoff"
-                               ProgressCutoff="@progressCutoff"
-                               HighestScore="@highestScore"
-                               LowestScore="@lowestScore"
-                               HasRaceClasses="@hasRaceClasses" />
-            </MudPaper>
+                <MudButtonGroup Color="Color.Tertiary" Variant="Variant.Text">
+                    <ScreenshotIconButton TargetId="qualy-table" Class="btn-sm" />
+                    @if (QualySession.IsFinished == false && advancedRuns != amountRuns)
+                    {
+                        <MudTooltip Text="Advance to next run" Placement="Placement.Top" Color="Color.Tertiary">
+                            <MudIconButton Icon="@IconCollection.ChevronsRight" OnClick="Advance" Class="btn-sm" />
+                        </MudTooltip>
+                    }
+                </MudButtonGroup>
+            </CommonSession>
         }
     </div>
 </MudContainer>
