--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
@@ -32,10 +32,12 @@
 
             <div class="d-flex flex-row-reverse" style="width:30%">
                 <MudButtonGroup Variant="Variant.Text" Color="Color.Tertiary">
-                    <ScreenshotIconButton TargetId="race-display" Class="btn-md" />
+                    <ScreenshotIconButton TargetId="race-display" Class="btn-sm" />
                     @if (Model.Race.State != State.Closed)
                     {
-                        <MudIconButton OnClick="Advance" Icon="@IconCollection.ChevronsRight" />
+                        <MudTooltip Text="Advance race" Placement="Placement.Top" Color="Color.Tertiary">
+                            <MudIconButton Icon="@IconCollection.ChevronsRight" OnClick="Advance" Class="btn-sm" />
+                        </MudTooltip>
                     }
                 </MudButtonGroup>
             </div>
@@ -171,7 +173,10 @@
         </MudTable>
         <MudPaper Class="pt-2 px-1">
             <SimProgressLinear Bars="@(occurrences.Select(e => ((NumberHelper.Percentage(1, calculationCount)), e.Value.SituationColour())).ToList())"
-                               AddIndicator="true" LineSize="ElementSize.Normal" CalculationDistance="@calculationDistance" TrackLength="@Model.Race.Track.Length" />
+                               AddIndicator="true"
+                               LineSize="ElementSize.Normal"
+                               CalculationDistance="@calculationDistance"
+                               TrackLength="@Model.Race.Track.Length" />
 
             <MudStack Row="true" AlignItems="AlignItems.Center" Class="px-4 pt-5 pb-2">
                 <MudText Typo="Typo.button">Legend</MudText>
@@ -184,18 +189,14 @@
                 <MudChip Icon="@IconCollection.EngineOff" IconColor="Color.Error" Size="Size.Small" Variant="Variant.Text" DisableRipple="true" Label="true">
                     Engine
                 </MudChip>
-                <MudChip Icon="@Icons.Material.Filled.ErrorOutline" IconColor="Color.Warning" Size="Size.Small" Variant="Variant.Text" DisableRipple="true" Label="true">
-                    Mistake
-                </MudChip>
+                <MudChip Text="Mistake" Icon="@Icons.Material.Filled.ErrorOutline" IconColor="Color.Warning" Size="Size.Small" Variant="Variant.Text" DisableRipple="true" Label="true" />
                 <MudChip Icon="@IconCollection.RefreshDot" IconColor="Color.Success" Size="Size.Small" Variant="Variant.Text" DisableRipple="true" Label="true">
                     Pitstop
                 </MudChip>
                 <MudChip Icon="@Icons.Material.Filled.SwapVert" IconColor="Color.Info" Size="Size.Small" Variant="Variant.Text" DisableRipple="true" Label="true">
                     Swap
                 </MudChip>
-                <MudChip Icon="@Icons.Material.Filled.Healing" IconColor="Color.Warning" Size="Size.Small" Variant="Variant.Text" DisableRipple="true" Label="true">
-                    Injury
-                </MudChip>
+                <MudChip Text="Injury" Icon="@Icons.Material.Filled.Healing" IconColor="Color.Warning" Size="Size.Small" Variant="Variant.Text" DisableRipple="true" Label="true" />
             </MudStack>
         </MudPaper>
     </div>
