a few formatting changes

--- a/SimTECH/SimTECH/Pages/Entrants/Drivers/Index.razor
+++ b/SimTECH/SimTECH/Pages/Entrants/Drivers/Index.razor
@@ -94,7 +94,8 @@
     };
 
     // Displayable helpers
-    private string ReadActiveLeague(long driverId) => currentDrivers.Find(e => e.DriverId == driverId)?.League ?? "None";
+    private string ReadActiveLeague(long driverId) =>
+        currentDrivers.Find(e => e.DriverId == driverId)?.LeagueName ?? "None";
 
     private async Task ShowDetailData(Driver driver)
     {
