--- a/SimTECH/SimTECH/Pages/Climates/Index.razor
+++ b/SimTECH/SimTECH/Pages/Climates/Index.razor
@@ -11,7 +11,9 @@
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Climates</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddItem" Class="btn-md">New</MudButton>
+            <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" StartIcon="@Icons.Material.Filled.Add" OnClick="AddItem" Class="btn-sm">
+                New
+            </MudButton>
         </MudStack>
         <MudText Typo="Typo.body2" Color="Color.Info" Class="px-4 pb-2">RNG modifier subtracts from the minimum RNG and and adds to maximum RNG</MudText>
     </MudPaper>
