--- a/SimTECH/SimTECH/Pages/Motorsport/Contracts/Manager/ContractManager.razor
+++ b/SimTECH/SimTECH/Pages/Motorsport/Contracts/Manager/ContractManager.razor
@@ -117,6 +117,6 @@
     private async Task SaveContracts(List<Contract> addedContracts)
     {
         await _contractService.AddContracts(addedContracts);
-        _nav.NavigateTo("contracts");
+        _nav.NavigateTo("motorsport");
     }
 }
