--- a/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/EditDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/EditDrivers.razor
@@ -13,7 +13,7 @@
                         <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                             <MudText>@context.Driver?.FullName</MudText>
                             <MudSpacer />
-                            <CountryFlag Code="@(context.Driver?.Country ?? Globals.DefaultCountry)" Size="ElementSize.Small" />
+                            <CountryFlag Code="@context.Driver?.Country" Size="ElementSize.Small" />
                         </MudStack>
                     </MudTd>
                     <MudTd DataLabel="Number">
@@ -28,7 +28,7 @@
                         <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                             <MudText>@context.Driver?.FullName</MudText>
                             <MudSpacer />
-                            <CountryFlag Code="@(context.Driver?.Country ?? Globals.DefaultCountry)" Size="ElementSize.Small" />
+                            <CountryFlag Code="@context.Driver?.Country" Size="ElementSize.Small" />
                         </MudStack>
                     </MudTd>
                     <MudTd DataLabel="Number">
