--- a/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/FinalCheck.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/FinalCheck.razor
@@ -15,7 +15,7 @@
                         <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                             <MudText>@context.Driver?.FullName</MudText>
                             <MudSpacer />
-                            <CountryFlag Code="@(context.Driver?.Country ?? Globals.DefaultCountry)" Size="ElementSize.Small" />
+                            <CountryFlag Code="@context.Driver?.Country" Size="ElementSize.Small" />
                         </MudStack>
                     </MudTd>
                     <MudTd DataLabel="Number">
